--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-
-h1><b>My Sites</b></h1>
+<header>
+<h1><b>My Sites</b></h1>
+</header>
 <a href="Bio/bio.html">Bio</a>
 <br/>
 <a href="Landing/index.html">Company</a>
